# cost-prophet

./: .gitignore  .python-version  pyproject.toml
DATA/: results-20210602-211116.json  results-20210616-213213.json  results-20210621-222050.json  softimpute.csv
cost_prophet/: ball.py  cpi.py  cpi_matrix_completion.ipynb  imput_runner.py  nuclear_ball.ipynb  softimpute_out.csv  softimpute_out1.csv
cost_prophet/utils/: evaluation.py  experiment.py  linear_alebra.py
tests/: test_cost_prophet.py
