[tool.poetry]
name = "cost_prophet"
version = "0.1.0"
description = ""
authors = ["antoninak <antonina.krajewska@nask.pl>"]

[tool.poetry.dependencies]
python = "^3.9,<3.11"
fancyimpute = { path = "../fancyimpute/", develop = true }
pandas = "^1.3.2"
seaborn = "^0.11.2"
dask = "^2021.8.1"
graphviz = "^0.17"
distributed = "^2021.9.0"
python-dotenv = "^0.19.0"
matrix-completion = { path = "../matrix-completion/", develop = true }
plotly = "^5.3.1"
[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
